--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact Us | Home Maintenance & Handyman Services in Askern & Doncaster DN6</title>
@@ -14,7 +13,6 @@
 <meta property="og:description" content="Contact your reliable handyman service in Askern & Doncaster DN6 for quotes and bookings.">
 <meta property="og:url" content="https://steely1968.github.io/contact/">
 <meta property="og:image" content="/logo.png">
-
 <meta name="twitter:card" content="summary_large_image">
 
 <style>
@@ -104,7 +102,6 @@ footer a:hover{text-decoration:underline;}
 <a href="/" aria-label="Home Maintenance Services Homepage">
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 </a>
-
 <nav role="navigation" aria-label="Main menu">
 <a href="/">Home</a>
 <a href="/contact">Contact</a>
@@ -119,9 +116,8 @@ footer a:hover{text-decoration:underline;}
 
 <h2>Send Us a Message</h2>
 
-<form action="https://formsubmit.co/YOUR-PRIVATE-ENDPOINT" method="POST" aria-label="Contact form">
-
-<!-- Redirect to thank-you page after submission -->
+<form action="https://formsubmit.co/martinsteel940@gmail.com" method="POST" aria-label="Contact form">
+<!-- Redirect to thank-you page -->
 <input name="_redirect" type="hidden" value="https://steely1968.github.io/thank-you">
 
 <label for="name">Your Name</label>
@@ -137,7 +133,6 @@ footer a:hover{text-decoration:underline;}
 <textarea id="message" name="message" rows="6" required aria-required="true"></textarea>
 
 <button type="submit">Send Message</button>
-
 </form>
 
 <h2>Quick Facts</h2>
