--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,8 @@ form button{margin-top:20px;padding:14px 22px;font-size:17px;font-weight:bold;bo
 form button:hover{background-color:#166b2b;}
 .quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
 .quick-facts ul{padding-left:20px;}
+.map-container{margin:25px 0;border-radius:10px;overflow:hidden;border:1px solid #ddd;}
+.map-container iframe{width:100%;height:350px;border:0;}
 footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;background:#f4f4f4;}
 footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
 footer a:hover{text-decoration:underline;}
@@ -117,7 +119,6 @@ footer a:hover{text-decoration:underline;}
 <h2>Send Us a Message</h2>
 
 <form action="https://formsubmit.co/martinsteel940@gmail.com" method="POST" aria-label="Contact form">
-<!-- Redirect to thank-you page -->
 <input name="_redirect" type="hidden" value="https://steely1968.github.io/thank-you">
 
 <label for="name">Your Name</label>
@@ -144,6 +145,11 @@ footer a:hover{text-decoration:underline;}
 <li>Free quotes and friendly service</li>
 <li>Fully insured and reliable</li>
 </ul>
+</div>
+
+<h2>Our Location</h2>
+<div class="map-container" role="region" aria-label="Business location map">
+<iframe loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.123456789!2d-1.153000!3d53.616000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ba1c2f1234567%3A0xabcdef1234567890!2s35%20Airstone%20Road%2C%20Askern%20DN6%200QA%2C%20UK!5e0!3m2!1sen!2suk!4v1700000000000!5m2!1sen!2suk" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade" title="Map of 35 Airstone Road, Askern, Doncaster DN6"></iframe>
 </div>
 
 <h2>Prefer to Call?</h2>
