--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ footer a:hover{text-decoration:underline;}
 </p>
 <p>
 <a href="https://www.facebook.com/profile.php?id=61584395621256">Find us on Facebook</a>
+<a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a>
 </p>
 </footer>
 
