--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,8 @@ footer a:hover{text-decoration:underline;}
 
 <footer role="contentinfo">
 <p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
-<p><a href="https://facebook.com" target="_blank" rel="noopener nofollow">Find us on Facebook</a></p>
+<p></p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a><p></p>
+
 </footer>
 
 <script>
