--- a/our-services/fence-construction-repairs.html
+++ b/our-services/fence-construction-repairs.html
@@ -186,7 +186,7 @@ footer a:hover{text-decoration:underline;}
 &copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
 </p>
 <p>
-<a href="https://www.facebook.com/profile.php?id=61584395621256">Find us on Facebook</a>
+<p></p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a><p></p>
 </p>
 </footer>
 
