--- a/bentley/gutter-clearing.html
+++ b/bentley/gutter-clearing.html
@@ -4,97 +4,86 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gutter Clearing & Home Repairs Bentley | HomeRepairs4U</title>
-<meta name="description" content="Professional gutter clearing and home repair services in Bentley. Prevent damp, water damage, and costly repairs with HomeRepairs4U.">
+<meta name="description" content="Expert gutter clearing and home repairs in Bentley. Protect your home from water damage with HomeRepairs4U local services.">
 
 <style>
 body { font-family: Arial,sans-serif; line-height:1.65; margin:20px; color:#333; }
 h1,h2,h3 { line-height:1.3; }
-.cta-btn { background:#2ecc71; color:#fff; padding:12px 20px; text-decoration:none; border-radius:6px; display:inline-block; font-weight:bold; }
+.cta-btn { background:#2ecc71; color:#fff; padding:12px 20px; text-decoration:none; border-radius:6px; display:inline-block; font-weight:bold; margin:10px 0; }
 .cta-btn:hover { background:#27ae60; }
 ul { margin-left:20px; }
 footer { font-size:0.9em; margin-top:30px; color:#555; }
+a { color:#2ecc71; text-decoration:none; }
+a:hover { text-decoration:underline; }
 </style>
 </head>
 <body>
 
 <h1>Gutter Clearing & Home Repairs in Bentley</h1>
 
-<a class="cta-btn" href="https://homerepairs4u.com/our-services/gutter-replacement-repairs-clearing.html">Book Gutter Clearing in Bentley</a>
+<a class="cta-btn" href="https://homerepairs4u.com/our-services/gutter-replacement-repairs-clearing.html">Book Bentley Gutter Service</a>
 
-<p>Keeping your gutters clear is essential to prevent damp and water damage. At <strong>HomeRepairs4U</strong>, we provide professional gutter clearing and home repair services throughout Bentley and surrounding 5-mile areas. From blocked gutters and downpipes to minor home maintenance, our local experts ensure your property stays safe and well-maintained.</p>
+<p>Maintaining your gutters is essential for protecting your home in Bentley from water damage, damp, and structural problems. At <strong>HomeRepairs4U</strong>, we specialise in professional gutter clearing and home repair services designed to keep your property safe and well-maintained. Our local experts understand the specific challenges Bentley homes face, from heavy rainfall to falling leaves, and deliver fast, reliable solutions tailored to each property.</p>
+
+<h2>Why Gutter Clearing Matters in Bentley</h2>
+<p>Clogged or damaged gutters can cause more than just a messy exterior—they can lead to serious structural issues over time. Overflowing gutters may damage walls, roofs, and foundations, and blocked downpipes can create damp patches in your home. Regular gutter clearing prevents these problems, saves money on repairs, and ensures your home is protected year-round. We also cover nearby areas including <a href="https://homerepairs4u.com/locations/askern.html">Askern</a>, <a href="https://homerepairs4u.com/locations/hexthorpe.html">Hexthorpe</a>, <a href="https://homerepairs4u.com/locations/balby.html">Balby</a>, and <a href="https://homerepairs4u.com/locations/lakeside.html">Lakeside</a>.</p>
 
 <h2>Our Bentley Services</h2>
 <ul>
-<li>Gutter clearing and inspection</li>
-<li>Downpipe unblocking</li>
-<li>Roof maintenance and minor repairs</li>
-<li>Home maintenance advice and minor fixes</li>
-<li>Preventative property care to avoid costly damage</li>
+<li><strong>Gutter Clearing & Inspection:</strong> We remove leaves, moss, and debris to ensure water flows freely, preventing blockages and damage.</li>
+<li><strong>Downpipe Maintenance:</strong> Blocked or damaged downpipes are repaired or cleared, reducing the risk of internal damp and mould.</li>
+<li><strong>Roof & Fascia Repairs:</strong> Small roof repairs and fascia replacements are carried out promptly to maintain structural integrity.</li>
+<li><strong>Preventative Property Maintenance:</strong> Our team identifies potential issues before they escalate, saving you time and money.</li>
+<li><strong>Expert Advice:</strong> We guide homeowners on gutter and roof maintenance, including recommended clearing schedules and seasonal tips.</li>
 </ul>
 
-<h2>Why Choose Us?</h2>
+<h2>Why Choose HomeRepairs4U?</h2>
+<p>We are a trusted local team offering a full range of home repair and gutter services in Bentley. Our pricing is transparent, ranging from £30 to £1000 depending on the job, and we provide fully insured, professional services. Customers choose us because we:</p>
 <ul>
-<li>Local expertise in Bentley homes</li>
-<li>Affordable pricing (£30–£1000)</li>
-<li>Fast response times</li>
-<li>Fully insured for peace of mind</li>
-<li>Friendly and reliable service</li>
+<li>Have local knowledge of Bentley properties and South Yorkshire weather patterns.</li>
+<li>Offer reliable, fast service with no hidden fees.</li>
+<li>Use modern tools and safe methods for all gutter and repair work.</li>
+<li>Provide preventative maintenance to avoid costly repairs.</li>
+<li>Maintain excellent customer feedback across the area.</li>
 </ul>
 
-<h2>Quick Facts</h2>
+<h2>Quick Facts About Gutter Maintenance</h2>
 <ul>
-<li>Blocked gutters are a leading cause of damp in South Yorkshire.</li>
-<li>Most Bentley homes need gutter clearing twice per year.</li>
-<li>Overflowing gutters can damage brickwork and foundations.</li>
-<li>Regular maintenance increases gutter lifespan.</li>
+<li>Most Bentley homes benefit from gutter clearing at least twice per year, typically in spring and autumn.</li>
+<li>Overflowing gutters can damage walls, roofs, and foundations if left unchecked.</li>
+<li>Regular maintenance extends the life of your gutters and prevents unexpected expenses.</li>
+<li>Falling leaves and storms can accelerate blockages—timely clearing is essential.</li>
 </ul>
 
-<h2>Frequently Asked Questions</h2>
-<h3>How often should Bentley gutters be cleared?</h3>
-<p>Twice per year is typical, more frequently if your property is near trees.</p>
+<h2>FAQs</h2>
+<h3>How often should gutters be cleared in Bentley?</h3>
+<p>Twice per year is standard, but homes surrounded by trees may require more frequent maintenance.</p>
+
 <h3>Do you offer emergency gutter clearing?</h3>
-<p>Yes, especially after storms or heavy rain.</p>
-<h3>Do you cover nearby areas?</h3>
-<p>Yes, including Askern, Arksey, Scawsby, Adwick-le-Street, Wheatley, and Toll Bar.</p>
+<p>Yes. We respond quickly after storms or heavy rainfall to prevent water damage.</p>
+
+<h3>Which areas do you cover near Bentley?</h3>
+<p>We also provide services to <a href="https://homerepairs4u.com/locations/askern.html">Askern</a>, <a href="https://homerepairs4u.com/locations/hexthorpe.html">Hexthorpe</a>, <a href="https://homerepairs4u.com/locations/balby.html">Balby</a>, <a href="https://homerepairs4u.com/locations/lakeside.html">Lakeside</a>, <a href="https://homerepairs4u.com/locations/armthorpe.html">Armthorpe</a>, and surrounding areas.</p>
 
 <footer>
 <strong>HomeRepairs4U</strong><br>
 Tel: 07735 873694<br>
 Address: Airstone Road, Askern, South Yorkshire, DN6 0QA<br>
-<a href="https://homerepairs4u.com">homerepairs4u.com</a>
+<a href="https://homerepairs4u.com">homerepairs4u.com</a><br><br>
+<strong>Nearby Locations:</strong>
+<a href="https://homerepairs4u.com/locations/askern.html">Askern</a> |
+<a href="https://homerepairs4u.com/locations/hexthorpe.html">Hexthorpe</a> |
+<a href="https://homerepairs4u.com/locations/balby.html">Balby</a> |
+<a href="https://homerepairs4u.com/locations/lakeside.html">Lakeside</a> |
+<a href="https://homerepairs4u.com/locations/armthorpe.html">Armthorpe</a>
 </footer>
 
-<!-- LocalBusiness + Service + FAQ Schema -->
 <script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"LocalBusiness",
-"name":"HomeRepairs4U",
-"image":"https://homerepairs4u.com/images/home-repairs.jpg",
-"telephone":"07735873694",
-"address":{
-"@type":"PostalAddress",
-"streetAddress":"Airstone Road",
-"addressLocality":"Askern",
-"addressRegion":"South Yorkshire",
-"postalCode":"DN6 0QA",
-"addressCountry":"GB"
-},
-"priceRange":"£30 - £1000",
-"url":"https://homerepairs4u.com",
-"description":"Gutter clearing and home repairs in Bentley and nearby areas."
-}
+{"@context":"https://schema.org","@type":"LocalBusiness","name":"HomeRepairs4U","image":"https://homerepairs4u.com/images/home-repairs.jpg","telephone":"07735873694","address":{"@type":"PostalAddress","streetAddress":"Airstone Road","addressLocality":"Askern","addressRegion":"South Yorkshire","postalCode":"DN6 0QA","addressCountry":"GB"},"priceRange":"£30 - £1000","url":"https://homerepairs4u.com","description":"Gutter clearing and home repairs in Bentley and surrounding areas."}
 </script>
+
 <script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{"@type":"Question","name":"How often should gutters be cleared?","acceptedAnswer":{"@type":"Answer","text":"Bentley homes should be cleared twice yearly; more often if near trees."}},
-{"@type":"Question","name":"Do you offer emergency service?","acceptedAnswer":{"@type":"Answer","text":"Yes, especially after storms."}},
-{"@type":"Question","name":"Do you cover surrounding areas?","acceptedAnswer":{"@type":"Answer","text":"Yes, including Askern, Arksey, Scawsby, Adwick-le-Street, Wheatley, and Toll Bar."}}
-]
-}
+{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How often should gutters be cleared in Bentley?","acceptedAnswer":{"@type":"Answer","text":"Twice per year is standard, but homes surrounded by trees may require more frequent maintenance."}},{"@type":"Question","name":"Do you offer emergency gutter clearing?","acceptedAnswer":{"@type":"Answer","text":"Yes. We respond quickly after storms or heavy rainfall to prevent water damage."}},{"@type":"Question","name":"Which areas do you cover near Bentley?","acceptedAnswer":{"@type":"Answer","text":"Askern, Hexthorpe, Balby, Lakeside, Armthorpe, and surrounding areas."}}]}
 </script>
 
 </body>
