--- a/our-services/gardening-services.html
+++ b/our-services/gardening-services.html
@@ -171,12 +171,12 @@ footer a:hover{text-decoration:underline;}
 
 <h2>Related Services</h2>
 <ul>
-<li><a href="/our-services/gutter-replacement-repairs-clearing/">Gutter Replacement, Repairs & Clearing</a></li>
-<li><a href="/our-services/upvc-restoration/">UPVC Restoration</a></li>
-<li><a href="/our-services/exterior-carpentry/">Exterior Carpentry</a></li>
-<li><a href="/our-services/fence-construction-repairs/">Fence Construction & Repairs</a></li>
-<li><a href="/our-services/pressure-washing/">Pressure Washing</a></li>
-<li><a href="/our-services/exterior-decorating/">Exterior Decorating</a></li>
+<li><a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Clearing</a></li>
+<li><a href="/our-services/upvc-restoration">UPVC Restoration</a></li>
+<li><a href="/our-services/exterior-carpentry">Capentry Services</a></li>
+<li><a href="/our-services/fence-construction-repairs">Fence Construction & Repairs</a></li>
+<li><a href="/our-services/pressure-washing">Pressure Washing</a></li>
+<li><a href="/our-services/exterior-decorating">Exterior Decorating</a></li>
 </ul>
 
 <h2>Contact Us</h2>
