--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -4,16 +4,27 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exterior Decorating | Home Maintenance Services Askern DN6</title>
-<meta name="description" content="Professional exterior decorating services in Askern & Doncaster DN6. Painting, staining, and finishing for walls, fences, doors, and other exterior surfaces. Affordable and reliable handyman services.">
+
+<title>Exterior Decorating | Exterior House Painting Askern & Doncaster (DN6)</title>
+
+<meta name="description" content="Professional exterior decorating and house painting services in Askern & Doncaster DN6. High-quality Sandtex finishes, masonry painting, fence painting, staining and surface preparation. Affordable handyman decorating services.">
+
 <link rel="canonical" href="https://steely1968.github.io/our-services/exterior-decorating/">
 
+<!-- Preload image for SEO + speed -->
+<link rel="preload" as="image" href="https://steely1968.github.io/house-before-after.webp">
+
 <!-- Open Graph -->
-<meta property="og:title" content="Exterior Decorating | Home Maintenance Services Askern DN6">
-<meta property="og:description" content="Professional exterior decorating services in Askern & Doncaster DN6. Painting, staining, and finishing for walls, fences, doors, and other exterior surfaces.">
+<meta property="og:title" content="Exterior Decorating Services | Askern & Doncaster DN6">
+<meta property="og:description" content="Exterior house painting and decorating services in Askern & Doncaster DN6. Professional Sandtex finishes, fence & wall painting, and full surface preparation.">
 <meta property="og:url" content="https://steely1968.github.io/our-services/exterior-decorating/">
-<meta property="og:image" content="/logo.png">
+<meta property="og:image" content="https://steely1968.github.io/house-before-after.webp">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="800">
+
+<!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://steely1968.github.io/house-before-after.webp">
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
@@ -40,7 +51,10 @@ footer a:hover{text-decoration:underline;}
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
 "name": "Home Maintenance Services",
-"image": "https://steely1968.github.io/logo.png",
+"image": [
+"https://steely1968.github.io/logo.png",
+"https://steely1968.github.io/house-before-after.webp"
+],
 "url": "https://steely1968.github.io/",
 "telephone": "+447735873694",
 "priceRange": "£",
@@ -51,40 +65,21 @@ footer a:hover{text-decoration:underline;}
 "addressRegion": "Doncaster",
 "postalCode": "DN6 0QA",
 "addressCountry": "UK"
-},
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.616,
-"longitude": -1.153
-},
-"openingHoursSpecification": [{
-"@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
-"opens": "08:00",
-"closes": "18:00"
-}]
+}
 }
 </script>
 
-<!-- Service-specific Schema -->
+<!-- Service Schema -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
 "@type": "Service",
 "name": "Exterior Decorating",
-"serviceType": "Exterior painting, staining, and finishing of walls, fences, doors, and other surfaces",
+"serviceType": "Exterior house painting, staining, masonry painting, finish coatings",
 "provider": {
 "@type": "LocalBusiness",
 "name": "Home Maintenance Services",
-"telephone": "+447735873694",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-}
+"telephone": "+447735873694"
 },
 "areaServed": {
 "@type": "Place",
@@ -98,6 +93,21 @@ footer a:hover{text-decoration:underline;}
 }
 </script>
 
+<!-- ImageObject Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "ImageObject",
+"contentUrl": "https://steely1968.github.io/house-before-after.webp",
+"description": "Before and after exterior decorating project in Askern using Sandtex Brick Red masonry paint.",
+"name": "Exterior Decorating Before and After",
+"author": {
+"@type": "LocalBusiness",
+"name": "Home Maintenance Services"
+}
+}
+</script>
+
 <!-- FAQ Schema -->
 <script type="application/ld+json">
 {
@@ -106,23 +116,18 @@ footer a:hover{text-decoration:underline;}
 "mainEntity": [
 {
 "@type": "Question",
-"name": "Do you paint all types of exterior surfaces?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we paint walls, fences, doors, gates, and other exterior surfaces using quality paints and finishes." }
+"name": "Do you prepare exterior surfaces?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, all surfaces are cleaned, sanded and primed before painting to ensure a long-lasting professional finish." }
 },
 {
 "@type": "Question",
-"name": "Can you prepare surfaces before painting?",
-"acceptedAnswer": { "@type": "Answer", "text": "Absolutely. We clean, sand, and prime surfaces to ensure a long-lasting and professional finish." }
+"name": "Which exterior surfaces do you paint?",
+"acceptedAnswer": { "@type": "Answer", "text": "Walls, masonry, fences, gates, exterior woodwork, doors, windows, and more." }
 },
 {
 "@type": "Question",
-"name": "Do you offer advice on colour and finishes?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we can advise on suitable colours, finishes, and protective coatings for your property." }
-},
-{
-"@type": "Question",
-"name": "Which areas do you serve?",
-"acceptedAnswer": { "@type": "Answer", "text": "Askern, Doncaster DN6, and surrounding South Yorkshire areas." }
+"name": "Do you serve the whole Doncaster area?",
+"acceptedAnswer": { "@type": "Answer", "text": "We cover Askern, Doncaster DN6 and all surrounding South Yorkshire areas." }
 }
 ]
 }
@@ -132,7 +137,7 @@ footer a:hover{text-decoration:underline;}
 <body>
 
 <header>
-<img src="/logo.png" alt="Home Maintenance Services Logo">
+<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
 <a href="/contact">Contact</a>
@@ -141,20 +146,46 @@ footer a:hover{text-decoration:underline;}
 </header>
 
 <main>
-<h1>Exterior Decorating Services in Askern & Doncaster (DN6)</h1>
 
-<p>Enhance and protect the exterior of your property with our professional decorating services. We provide high-quality painting, staining, and finishing for walls, fences, doors, and other exterior surfaces.</p>
+<h1>Exterior Decorating & House Painting in Askern & Doncaster (DN6)</h1>
 
-<h2>Our Exterior Decorating Services Include:</h2>
+<p>Transform and protect your property with our professional exterior decorating services. We specialise in exterior house painting, masonry painting, fence and gate painting, wood staining, and protective coatings for all outdoor surfaces. With years of experience and attention to detail, we provide reliable, high-quality workmanship across Askern and Doncaster DN6.</p>
+
+<!-- BEFORE / AFTER IMAGE -->
+<h2>Recent Exterior Painting Project</h2>
+<p>Here’s a before and after example of a home recently painted using <strong>Sandtex Brick Red masonry paint</strong> — giving the property a modern, protected, and refreshed look.</p>
+
+<picture>
+<source srcset="https://steely1968.github.io/house-before-after.webp" type="image/webp">
+<img src="https://steely1968.github.io/house-before-after.webp"
+alt="Before and after exterior house painting using Sandtex Brick Red paint in Askern DN6."
+loading="lazy"
+width="1200"
+height="800">
+</picture>
+
+<h2>Our Exterior Decorating Services</h2>
 <ul>
-<li>Painting of walls, fences, doors, gates, and exterior structures</li>
-<li>Staining and varnishing for timber surfaces</li>
-<li>Surface preparation including cleaning, sanding, and priming</li>
-<li>Protective coatings for long-lasting results</li>
-<li>Colour and finish advice tailored to your property</li>
+<li>Exterior wall & masonry painting</li>
+<li>Fence, gate & shed painting</li>
+<li>Wood staining & varnishing</li>
+<li>Surface preparation (cleaning, sanding, priming)</li>
+<li>Weatherproof protective coatings</li>
+<li>Colour matching & finish advice</li>
 </ul>
 
-<h2>Other Services You May Be Interested In</h2>
+<h2>Why Customers Choose Us</h2>
+<div class="quick-facts">
+<ul>
+<li>Trusted local handyman in Askern & Doncaster DN6</li>
+<li>Professional finish with premium paints (including Sandtex)</li>
+<li>Reliable, friendly, fully insured service</li>
+<li>No call-out fees – fair pricing</li>
+<li>Residential and commercial properties covered</li>
+</ul>
+</div>
+
+<h2>Related Services</h2>
 <ul>
 <li><a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a></li>
 <li><a href="/our-services/upvc-restoration">UPVC Restoration</a></li>
@@ -164,31 +195,16 @@ footer a:hover{text-decoration:underline;}
 <li><a href="/our-services/pressure-washing">Pressure Washing</a></li>
 </ul>
 
-<h2>Quick Facts About Our Exterior Decorating Services</h2>
-<div class="quick-facts">
-<ul>
-<li>Local handyman and property maintenance service in Askern & Doncaster DN6</li>
-<li>Professional exterior painting, staining, and finishing services</li>
-<li>No call-out fees and fair pricing</li>
-<li>Fully insured and experienced in exterior decorating</li>
-<li>Reliable, friendly, and high-quality workmanship</li>
-<li>Serving residential and commercial properties</li>
-</ul>
-</div>
+<h2>Get a Free Exterior Decorating Quote</h2>
+<p>For exterior house painting or property decorating, contact us today for free advice or a no-obligation quote.</p>
 
-<h2>Contact Us</h2>
-<p>For exterior painting, staining, or decorating services, contact us today for advice or a free quote.</p>
 <p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
 <footer>
-<p>
-&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
-</p>
-<p>
-<p></p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a><p></p>
-</p>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a></p>
 </footer>
 
 <script>
