--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exterior House Painting & Decorating in Askern DN6 | Home Maintenance Services</title>
-<meta name="description" content="Professional exterior house painting and decorating in Askern DN6 and Doncaster. Experts in masonry painting, sanding, priming and weatherproof finishes.">
 
-<!-- Logo & Image SEO -->
-<link rel="preload" as="image" href="/logo.png">
+<title>Exterior Decorating | Exterior House Painting Askern & Doncaster (DN6)</title>
+
+<meta name="description" content="Professional exterior decorating and house painting services in Askern & Doncaster DN6. High-quality Sandtex finishes, masonry painting, fence painting, staining and surface preparation. Affordable handyman decorating services.">
+
+<link rel="canonical" href="https://steely1968.github.io/our-services/exterior-decorating/">
+
+<!-- Preload image for SEO + speed -->
 <link rel="preload" as="image" href="/images/house-before-after.webp">
 
 <!-- Open Graph -->
-<meta property="og:title" content="Exterior House Painting & Decorating in Askern DN6">
-<meta property="og:description" content="Professional exterior house painting and decorating services in Askern and Doncaster. Transforming homes with long-lasting, weatherproof finishes.">
-<meta property="og:image" content="https://steely1968.github.io/images/house-before-after.webp">
-<meta property="og:type" content="website">
+<meta property="og:title" content="Exterior Decorating Services | Askern & Doncaster DN6">
+<meta property="og:description" content="Exterior house painting and decorating services in Askern & Doncaster DN6. Professional Sandtex finishes, fence & wall painting, and full surface preparation.">
+<meta property="og:url" content="https://steely1968.github.io/our-services/exterior-decorating/">
+<meta property="og:image" content="https://steely1968.github.io/house-before-after.webp">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="800">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://steely1968.github.io/images/house-before-after.webp">
+<meta name="twitter:image" content="https://steely1968.github.io/house-before-after.webp">
 
-<!-- Structured Data -->
+<style>
+body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
+header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
+header img{height:90px;}
+nav{display:flex;align-items:center;gap:15px;}
+nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;}
+nav a:hover{background:#e2e2e2;}
+.call-button{background-color:#1a7f33;color:#fff;}
+.call-button:hover{background-color:#166b2b;}
+main{padding:20px;max-width:900px;margin:auto;}
+h1,h2{margin-top:10px;}
+ul{padding-left:20px;}
+.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
+.quick-facts ul{padding-left:20px;}
+footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
+footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
+footer a:hover{text-decoration:underline;}
+</style>
+
+<!-- LocalBusiness Schema -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -28,103 +53,163 @@
 "name": "Home Maintenance Services",
 "image": [
 "https://steely1968.github.io/logo.png",
-"https://steely1968.github.io/images/house-before-after.webp"
+"https://steely1968.github.io/house-before-after.webp"
 ],
+"url": "https://steely1968.github.io/",
+"telephone": "+447735873694",
+"priceRange": "£",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "UK"
+}
+}
+</script>
+
+<!-- Service Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "Service",
+"name": "Exterior Decorating",
+"serviceType": "Exterior house painting, staining, masonry painting, finish coatings",
+"provider": {
+"@type": "LocalBusiness",
+"name": "Home Maintenance Services",
+"telephone": "+447735873694"
+},
+"areaServed": {
+"@type": "Place",
 "address": {
 "@type": "PostalAddress",
 "addressLocality": "Askern",
 "addressRegion": "Doncaster",
-"postalCode": "DN6",
-"addressCountry": "GB"
-},
-"url": "https://steely1968.github.io",
-"description": "Professional exterior house painting and decorating services in Askern and Doncaster."
+"addressCountry": "UK"
+}
+}
 }
 </script>
 
-<!-- ImageObject for Google -->
+<!-- ImageObject Schema -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org/",
+"@context": "https://schema.org",
 "@type": "ImageObject",
-"contentUrl": "https://steely1968.github.io/images/house-before-after.webp",
-"name": "Exterior House Painting Before and After",
-"description": "A recent exterior decorating project in Askern DN6 showing before and after results using Sandtex Brick Red masonry paint."
+"contentUrl": "https://steely1968.github.io/house-before-after.webp",
+"description": "Before and after exterior decorating project in Askern using Sandtex Brick Red masonry paint.",
+"name": "Exterior Decorating Before and After",
+"author": {
+"@type": "LocalBusiness",
+"name": "Home Maintenance Services"
+}
 }
 </script>
 
-<link rel="stylesheet" href="/style.css">
-</head>
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "Do you prepare exterior surfaces?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, all surfaces are cleaned, sanded and primed before painting to ensure a long-lasting professional finish." }
+},
+{
+"@type": "Question",
+"name": "Which exterior surfaces do you paint?",
+"acceptedAnswer": { "@type": "Answer", "text": "Walls, masonry, fences, gates, exterior woodwork, doors, windows, and more." }
+},
+{
+"@type": "Question",
+"name": "Do you serve the whole Doncaster area?",
+"acceptedAnswer": { "@type": "Answer", "text": "We cover Askern, Doncaster DN6 and all surrounding South Yorkshire areas." }
+}
+]
+}
+</script>
 
+</head>
 <body>
+
 <header>
-<img src="/logo.png" alt="Home Maintenance Services Logo" class="logo">
-<h1>Exterior Decorating Services</h1>
+<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Logo">
+<nav>
+<a href="/">Home</a>
+<a href="/contact">Contact</a>
+<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
+</nav>
 </header>
 
 <main>
 
-<section>
-<h2>Transform Your Home’s Exterior</h2>
-<p>
-Enhance and protect the exterior of your property with our professional painting and decorating services.
-We work across Askern, Doncaster (DN6), and surrounding areas delivering durable, weatherproof finishes
-that keep your home looking its best for years.
-</p>
-</section>
+<h1>Exterior Decorating & House Painting in Askern & Doncaster (DN6)</h1>
 
-<!-- BEFORE & AFTER IMAGE -->
-<section>
+<p>Transform and protect your property with our professional exterior decorating services. We specialise in exterior house painting, masonry painting, fence and gate painting, wood staining, and protective coatings for all outdoor surfaces. With years of experience and attention to detail, we provide reliable, high-quality workmanship across Askern and Doncaster DN6.</p>
+
+<!-- BEFORE / AFTER IMAGE -->
 <h2>Recent Exterior Painting Project</h2>
-<p>Below is a recent job where we used <strong>Sandtex Brick Red</strong> to completely refresh the appearance of a semi-detached home in Askern DN6.</p>
+<p>Here’s a before and after example of a home recently painted using <strong>Sandtex Brick Red masonry paint</strong> — giving the property a modern, protected, and refreshed look.</p>
 
 <picture>
-<source srcset="/images/house-before-after.webp" type="image/webp">
-<img src="/images/house-before-after.webp"
-alt="Before and after of exterior house painting in Askern DN6 using Sandtex Brick Red masonry paint."
+<source srcset="https://steely1968.github.io/house-before-after.webp" type="image/webp">
+<img src="https://steely1968.github.io/house-before-after.webp"
+alt="Before and after exterior house painting using Sandtex Brick Red paint in Askern DN6."
 loading="lazy"
 width="1200"
 height="800">
 </picture>
-</section>
 
-<section>
-<h2>Our Exterior Decorating Services Include</h2>
+<h2>Our Exterior Decorating Services</h2>
 <ul>
-<li>Masonry painting (weatherproof and UV-resistant)</li>
-<li>Sanding, filling and surface preparation</li>
-<li>Woodwork painting (fascias, soffits, doors, windows)</li>
-<li>Metal painting (gates, railings, outdoor fixtures)</li>
-<li>Crack repairs and sealing</li>
-<li>Primer and undercoat application</li>
-<li>Protective finishing coats</li>
+<li>Exterior wall & masonry painting</li>
+<li>Fence, gate & shed painting</li>
+<li>Wood staining & varnishing</li>
+<li>Surface preparation (cleaning, sanding, priming)</li>
+<li>Weatherproof protective coatings</li>
+<li>Colour matching & finish advice</li>
 </ul>
-</section>
 
-<section>
-<h2>Why Choose Us?</h2>
+<h2>Why Customers Choose Us</h2>
+<div class="quick-facts">
 <ul>
-<li>Reliable, local service based in Askern DN6</li>
-<li>High-quality, long-lasting exterior paint systems</li>
-<li>Clean, tidy and professional workmanship</li>
-<li>Honest pricing with no hidden costs</li>
+<li>Trusted local handyman in Askern & Doncaster DN6</li>
+<li>Professional finish with premium paints (including Sandtex)</li>
+<li>Reliable, friendly, fully insured service</li>
+<li>No call-out fees – fair pricing</li>
+<li>Residential and commercial properties covered</li>
 </ul>
-</section>
+</div>
 
-<section>
-<h2>Get a Free Quote</h2>
-<p>
-If you’re planning exterior painting or need help with preparation, repairs, or decorative finishes,
-we’re here to help. Contact us for a free, no-obligation quote.
-</p>
-<a href="/contact.html" class="button">Request a Free Quote</a>
-</section>
+<h2>Related Services</h2>
+<ul>
+<li><a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a></li>
+<li><a href="/our-services/upvc-restoration">UPVC Restoration</a></li>
+<li><a href="/our-services/gardening-services">Gardening Services</a></li>
+<li><a href="/our-services/exterior-carpentry">Exterior Carpentry</a></li>
+<li><a href="/our-services/fence-construction-repairs">Fence Construction & Repairs</a></li>
+<li><a href="/our-services/pressure-washing">Pressure Washing</a></li>
+</ul>
+
+<h2>Get a Free Exterior Decorating Quote</h2>
+<p>For exterior house painting or property decorating, contact us today for free advice or a no-obligation quote.</p>
+
+<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
 <footer>
-<p>© 2025 Home Maintenance Services — Askern, Doncaster DN6</p>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6</p>
+<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a></p>
 </footer>
+
+<script>
+document.getElementById("currentYear").textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
