--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -12,7 +12,7 @@
 <link rel="canonical" href="https://steely1968.github.io/our-services/exterior-decorating/">
 
 <!-- Preload image for SEO + speed -->
-<link rel="preload" as="image" href="/images/house-before-after.webp">
+<link rel="preload" as="image" href="https://homerepairs4u.com/images/house-before-after.webp">
 
 <!-- Open Graph -->
 <meta property="og:title" content="Exterior Decorating Services | Askern & Doncaster DN6">
