--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -12,7 +12,7 @@
 <link rel="canonical" href="https://steely1968.github.io/our-services/exterior-decorating/">
 
 <!-- Preload image for SEO + speed -->
-<link rel="preload" as="image" href="https://homerepairs4u.com/images/house-before-after.webp">
+<link rel="preload" as="image" href="/images/house-before-after.webp">
 
 <!-- Open Graph -->
 <meta property="og:title" content="Exterior Decorating Services | Askern & Doncaster DN6">
@@ -156,8 +156,8 @@ footer a:hover{text-decoration:underline;}
 <p>Here’s a before and after example of a home recently painted using <strong>Sandtex Brick Red masonry paint</strong> — giving the property a modern, protected, and refreshed look.</p>
 
 <picture>
-<source srcset="https://steely1968.github.io/house-before-after.webp" type="image/webp">
-<img src="https://steely1968.github.io/house-before-after.webp"
+<source srcset="https://steely1968.github.io/images/house-before-after.webp" type="image/webp">
+<img src="https://steely1968.github.io/images/house-before-after.webp"
 alt="Before and after exterior house painting using Sandtex Brick Red paint in Askern DN6."
 loading="lazy"
 width="1200"
