--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Exterior Decorating | Exterior Hous Painting Askern & Doncaster (DN6)</title>
+<title>Exterior Decorating | Exterior House Painting Askern & Doncaster (DN6)</title>
 
 <meta name="description" content="Professional exterior decorating and house painting services in Askern & Doncaster DN6. High-quality Sandtex finishes, masonry painting, fence painting, staining and surface preparation. Affordable handyman decorating services.">
 
