--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ footer a:hover{text-decoration:underline;}
 </p>
 <p>
 <a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a>
-<a href="https://steely1968.github.io/test" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a>
+<a href="https://steely1968.github.io/test" target="_blank" rel="noopener noreferrer">Test</a>
 </p>
 </footer>
 
